feat: Initial end-to-end implementation
- add MaterialUI and associated dependencies
- generate response from LLM and render in popup
- add basic CSS to popup body
- add charset to HTML
- this is still very PoC: missing error handling, still quite
messy, etc

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <link href="./index.css" rel="stylesheet" />
     <title>Popup</title>
   </head>
   <body>
