feat: OpenAI API key input
- populated extension options page
- a user can now input their OpenAI API key via the extension
options page rather than it having to be hard-coded at build time
- add basic theming with query for system colour mode preference
- some refactoring to improve code readability
- added rudimentary error handling

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link href="./index.css" rel="stylesheet" />
     <title>Options</title>
   </head>
   <body>
